--- a/css/nav.css
+++ b/css/nav.css
@@ -1,3 +1,9 @@
+* {
+  box-sizing: border-box;
+}
+body {
+  margin: 0;
+}
 .flexnav {
   display: flex;
   justify-content: space-between;
@@ -10,8 +16,7 @@
   background-color: white;
   margin-top: 20px;
   padding-left: 20px;
-  padding-right: 20px;
-  margin-right: -10px;
+  padding-right: 10px;
   padding-bottom: 4px;
   margin-bottom: -4px;
   border-radius: 15px 0px 0px 0px;
@@ -62,11 +67,6 @@ color:#00cc00;
 .navbar {
   background-color: #ff9900;
   padding-top: 30px;
-  margin-top: -10px;
-  padding-left: 10px;
-  margin-left: -10px;
-  padding-right: 10px;
-  margin-right: -10px;
   padding-bottom: 2px;
   border-bottom: 2px solid #0066cc;
 }
